initial commits for static site

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
 	<!-- Metas -->
 	<meta charset="utf-8">
-	<title>Meenachil / Meen Hacks V1</title>
-	<meta name="description" content="Meenachil Hacks, 24 Hour National Level Hackathon from August">
+	<title>Odiapreneur</title>
+	<meta name="description" content="An ideathon for higher secondary students">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-site-verification" content="ntUFSe18AqnePAZFrbNZ5cSVRyXndF_cBrPCwZgZ4CY" />
 	<!-- Css -->
@@ -90,7 +90,7 @@
 					<!--Row-->
 					<div class="row">
 						<img class="logo-default" src="img/logo/MHACKS_transp.png" alt="logo" />
-						<h4>MORE THAN A HACKATHON</h4>
+						<h4>MORE THAN AN IDEATHON</h4>
 						<p class="gradient-text"><strong> Registrations are Open</strong></p>
 						<a href="https://www.yepdesk.com/meenachil-hacks" class="but scroll "> Register Now</a>
 					</div>
@@ -112,12 +112,22 @@
 						<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="5.1983" y1="28.1187" x2="43.4067" y2="11.702">
 							<stop offset="0" style="stop-color:#399BFF" />
 							<stop offset="1" style="stop-color:#EE71F9" />
-							<h1 class="title">About Meenachil / Meen Hacks V1</h1>
+							<h1 class="title">About this event</h1>
 						</linearGradient>
-						<p class="title-lead mt-20">Meenachil / Meen Hacks V1 is a 24 Hour All India Level Hackathon hosted by the Technical Club/Communities of College of Engineering, Kidangoor. It is a sincere effort to provide a fruitful
-							experience to all those who wish to explore their areas of interest.The event is an opportunity for hackers to exchange their ideas, gain extra knowledge and to make good relations for future collaborations. We
-							wholeheartedly invite all the technophiles to this exciting Hackathon…</p>
-						<p class="title-lead mt-20">All activities are enforced with our<br>
+						<p class="title-lead mt-10">An ideathon on renewable energy for higher secondary students 
+							could involve a series of events or activities designed to encourage students to come up 
+							with innovative ideas and solutions related to renewable energy sources and their implementation. 
+							This could include brainstorming sessions, workshops, lectures, and presentations by experts 
+							in the field, as well as opportunities for students to work in teams and develop prototypes or 
+							business plans for their ideas. The goal of the ideathon could be to spark interest in renewable 
+							energy and encourage students to think critically about ways to address the challenges and 
+							opportunities presented by this important topic.</p>
+						<p class="title-lead mt-30">
+							The participants will compete among all students from all over the 30
+							districts accompanied by their respective Deans/Principals, science 
+							division supervisors. So buckle up and get ready to rack your brains! 
+						</p>
+						<p class="title-lead mt-30">All activities are enforced with our<br>
 							<h5 class="gradient-text"><a class="title-lead mt-20" href="https://github.com/meenhacks/Code-of-Conduct/blob/master/code-of-conduct.md">Code of Conduct</a></h5>
 						</p>
 					</div>
@@ -178,8 +188,8 @@
                               C29,4.776,29.224,5,29.5,5z" />
 							</svg>
 							<p>
-								<strong>DATE</strong>
-								<span>November 9 and 10</span>
+								<strong>DATE</strong><br>
+								<span>January 23rd</span>
 							</p>
 						</div>
 					</div>
@@ -216,9 +226,8 @@
                               M21.5,11.999c-1.93,0-3.5-1.57-3.5-3.5s1.57-3.5,3.5-3.5s3.5,1.57,3.5,3.5S23.43,11.999,21.5,11.999z" />
 							</svg>
 							<p>
-								<strong>LOCATION</strong>
-								<span>College Of Engineering
-									Kidangoor, Kerala </span>
+								<strong>LOCATION</strong><br>
+								<span>International Institute of Information Technology, Bhubaneswar</span>
 							</p>
 						</div>
 					</div>
@@ -255,7 +264,7 @@
 							</svg>
 							<p>
 								<strong>Problem Statements</strong>
-								<span>Real World</span>
+								<span>Renewable Energy</span>
 							</p>
 						</div>
 					</div>
@@ -289,16 +298,20 @@
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 ">
 							<div class="block-faq mb-50">
-								<h4 class="mb-10">ABOUT THE ORGANIZING COMMITTE</h4>
+								<h4 class="mb-10">ABOUT THE ORGANIZING COMMITTEE</h4>
 
-								<p class="title-lead mb-30">College of Engineering, Kidangoor (CEK) is one among the premier institutions in the state. The college is governed by the Co-operative Academy of Professional Education established by the
-									Government of Kerala. The institution glistens with outstanding records in both academic and extracurricular fields backed by excellent faculty and full-fledged facilities
-									The whole Event is the collabration of all the Technical Clubs and Societies of the Institute. This includes the <b>The Open Source Club, TinkerHub CEK, FOSS Club, Infin CEK, Coding Club, Mozilla Campus Club and
-										Developer Students Club</b>. These Clubs themselves hold 80% of all the Technical Activities in the Institute and has played a vital role in developing the Students with technical Skills and helps increase
-									their Job Prospects and Future.</p>
-								<h4 class="mb-10">A WORD ON DIVERSITY</h4>
+								<p class="title-lead mb-30">International Institute of Information Technology (IIIT) Bhubaneswar is a technical 
+									institute located in the city of Bhubaneswar, Odisha. It was established in the year 2006 as a 
+									joint venture between the Government of India, the Government of Odisha, and the industry partner, 
+									Tata Consultancy Services (TCS). The institute offers undergraduate, postgraduate, and PhD programs 
+									in various fields of engineering and computer science. It has a strong emphasis on research and 
+									innovation, and has well-equipped laboratories and state-of-the-art facilities for its students. 
+									IIIT Bhubaneswar has a great coding and developer environment with its various clubs like Google Developer 
+									Student's Club, Programming Society, The Automation and Robotics Society along with various other technical 
+									and non-technical clubs that is run by and for the students.</p>
+								<!-- <h4 class="mb-10">A WORD ON DIVERSITY</h4>
 								<p class="title-lead mt-30">Meenachil Hacks is focused on Community Development and Diversity. We believe everyone should be given equal chance and none should be excluded rom technology. As a support to diversity,
-									there are special prizes and swags for Women Participants</p>
+									there are special prizes and swags for Women Participants</p> -->
 
 							</div>
 
@@ -320,7 +333,7 @@
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
 							<h1 class="title">Mentors</h1>
-							<p class="title-lead mt-10">We are bringing you the perfect combination of content and experience to ignite your <br>heart equip your mind and spark your skill.</p>
+							<p class="title-lead mt-10">We are bringing you the perfect combination of content and experience to ignite your <br>heart, equip your mind and spark your skill.</p>
 						</div>
 					</div>
 					<!--End row-->
@@ -377,7 +390,7 @@
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
 							<h1 class="title">JUDGES</h1>
-							<p class="title-lead mt-10">We are bringing you the perfect combination of content and experience to ignite your <br>heart equip your mind and spark your skill.</p>
+							<!-- <p class="title-lead mt-10">We are bringing you the perfect combination of content and experience to ignite your <br>heart equip your mind and spark your skill.</p> -->
 						</div>
 					</div>
 					<!--End row-->
@@ -393,7 +406,7 @@
 								</div>
 								<div class="block-info-2">
 									<p>
-										<strong>Prof. Ojus Thomas Lee </strong>
+										<strong>Prof. Dr. Debashish Jena</strong>
 										<span>Head of Dept. CSE</span>
 										<span>College of Engineering Kidangoor</span>
 									</p>
