--- a/index.html
+++ b/index.html
@@ -754,15 +754,21 @@
 				<!--End container-->
 		</section>
 		<!--End sponser section-->
-		<section id="" class="register pt-200 pb-200 overlay">
+		<!-- <section id="" class="register pt-200 pb-200 overlay">
 			<div class="background-img ">
 				<img src="img/KidangoorCollege.jpg" alt="">
-		</section>
+		</section> -->
 		<!--Contact section-->
-		<section id="location" class="location pt-200 pb-200">
-			<div><iframe
-				 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.1553918048503!2d76.61903831430942!3d9.667760993079403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07d293a982ceeb%3A0xd62bf193983589fe!2sCollege+of+Engineering%2C+Kidangoor!5e0!3m2!1sen!2sin!4v1515608280993"
-				 width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+		<section id="location" class="location pb-200" style="padding-top: 50px;display: flex;justify-content: center;">
+			<div style="max-width:1000px; flex:1; margin: auto 50px;">
+				<!-- <iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.1553918048503!2d76.61903831430942!3d9.667760993079403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07d293a982ceeb%3A0xd62bf193983589fe!2sCollege+of+Engineering%2C+Kidangoor!5e0!3m2!1sen!2sin!4v1515608280993"
+					height="600" frameborder="0" allowfullscreen></iframe> -->
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3742.1333357361545!2d85.7433963!3d20.2947474!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1907923fc9c557%3A0xd3b0b05336a9dfaa!2sInternational%20Institute%20of%20Information%20Technology%20Bhubaneswar!5e0!3m2!1sen!2sin!4v1671446199586!5m2!1sen!2sin"
+						height="600" style="border:0;" allowfullscreen loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
 		</section>
 		<!--End contact section-->
 		<!--Accom section-->
@@ -789,18 +795,18 @@
 					<div class="col-sm-12 text-center">
 						<div class="col-md-2 col-sm-2 ">
 							<div class="block-club">
-								<img src="img/osc.png" alt="">
+								<img src="img/techSocLogo.png" alt="Tech Society">
 							</div>
 						</div>
 						<div class="col-md-2 col-sm-2">
 							<div class="block-club-1 ">
-								<img src="img/CEK.png" height="200" width="410" alt="">
+								<img src="img/psoc_transparent.png" height="200" width="410" alt="PSoc">
 
 							</div>
 						</div>
 						<div class="col-md-2 col-sm-2">
 							<div class="block-club">
-								<img src="img/Infin.png" height="200" width="410" alt="">
+								<img src="img/e-cell.png" height="200" width="410" alt="E-Cell">
 							</div>
 						</div>
 						<!-- <div class="col-md-2 col-sm-2">
