--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 								<ul>
 									<li><a class="scroll" href="#wrapper">Home</a></li>
 									<li><a class="scroll" href="#about">About</a></li>
-									<li><a class="scroll" href="https://docs.google.com/document/d/1970fadrLpnqHc4Kgky58sbQ4qTVejZ5OXrOkqhX62KI/edit?usp=sharing">Rules</a></li>
+									<!-- <li><a class="scroll" href="https://docs.google.com/document/d/1970fadrLpnqHc4Kgky58sbQ4qTVejZ5OXrOkqhX62KI/edit?usp=sharing">Rules</a></li> -->
 									<li><a class="scroll" href="#mentors">Judges & Mentors</a></li>
 									<li><a class="scroll" href="#workshop">Workshop</a></li>
 									<li><a class="scroll" href="#prizes">Prizes</a></li>
-									<li><a class="scroll" href="#sponsors">Sponsors</a></li>
+									<li><a class="scroll" href="#sponsors">Organizers</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -114,18 +114,18 @@
 							<stop offset="1" style="stop-color:#EE71F9" />
 							<h1 class="title">About this event</h1>
 						</linearGradient>
-						<p class="title-lead mt-10">An ideathon on renewable energy for higher secondary students 
-							could involve a series of events or activities designed to encourage students to come up 
-							with innovative ideas and solutions related to renewable energy sources and their implementation. 
-							This could include brainstorming sessions, workshops, lectures, and presentations by experts 
-							in the field, as well as opportunities for students to work in teams and develop prototypes or 
-							business plans for their ideas. The goal of the ideathon could be to spark interest in renewable 
+						<p class="title-lead mt-10">An ideathon based on renewable energy for higher secondary students 
+							that involves events and activities designed to encourage students to come up 
+							with innovative ideas and solutions related to renewable energy sources targeted at resolving 
+							socio-economic issues and their implementation. The participation is open for all streams of students.
+							This will include brainstorming sessions, workshops, lectures, and presentations by experts 
+							in technology, as well as opportunities for students to work in teams and develop prototypes or 
+							business plans for their ideas. The goal of the ideathon will be to spark interest in renewable 
 							energy and encourage students to think critically about ways to address the challenges and 
-							opportunities presented by this important topic.</p>
+							opportunities presented. Also, it targets at imbibing entrepreneurship traits in students</p>
 						<p class="title-lead mt-30">
 							The participants will compete among all students from all over the 30
-							districts accompanied by their respective Deans/Principals, science 
-							division supervisors. So buckle up and get ready to rack your brains! 
+							districts of odisha. So buckle up and get ready to rack your brains! 
 						</p>
 						<p class="title-lead mt-30">All activities are enforced with our<br>
 							<h5 class="gradient-text"><a class="title-lead mt-20" href="https://github.com/meenhacks/Code-of-Conduct/blob/master/code-of-conduct.md">Code of Conduct</a></h5>
@@ -189,7 +189,7 @@
 							</svg>
 							<p>
 								<strong>DATE</strong><br>
-								<span>January 23rd</span>
+								<span>January 27th - 28th</span>
 							</p>
 						</div>
 					</div>
@@ -227,7 +227,7 @@
 							</svg>
 							<p>
 								<strong>LOCATION</strong><br>
-								<span>International Institute of Information Technology, Bhubaneswar</span>
+								<span>IIIT Bhubaneswar</span>
 							</p>
 						</div>
 					</div>
@@ -532,25 +532,44 @@
 					<ul class="block-tab">
 						<!--Tab-->
 						<li class="active ">
-							<div class="block-date"><i class="et-line-calendar"></i><strong>SCHEDULE OUTLINE</strong> <span> 9 to 10 AUGUST 2019</span></div>
+							<div class="block-date"><i class="et-line-calendar"></i><strong>SCHEDULE OUTLINE</strong> <span> December '22 - January '23</span></div>
 							<div class="block-detail">
-								<span class="time">Nov 9th</span>
-								<span class="topic">DAY 1</span>
+								<span class="time">December 23rd</span>
+								<span class="topic">COMMENCING ORIENTATION</span>
 								<div class="block-text">
-									<p>1:00 PM - REGISTRATION</p>
-									<p>2:00 PM - OPENING CEREMONY</p>
-									<p>3:00 PM - HACKING BEGINS.....!!!!!</p>
-									<p>4:30 PM - TEA and SNACKS</p>
-									<p>7:00 PM - GAMES AND ACTIVITIES</p>
+									<p>10:00 AM</p>
+									<p>The guests include -</p>
+									<p>The event witnesses select 30 Deans/Principals form each district</p>
+									<p>11:30 AM - TEA and SNACKS</p>
+									<p>12:00 PM - GAMES AND ACTIVITIES</p>
 									<p>8:30 PM - DINNER </p>
 									<p>12:15 AM - WORKSHOP</p>
-									<p>2:00 AM - BREAK(IF AWAKE)</p>
+									<p>2:00 PM - BREAK(IF AWAKE)</p>
 								</div>
 							</div>
 							<div class="block-detail">
-								<span class="time">November 10th</span> <span class="topic">DAY 2</span>
+								<span class="time">January 13th - 14th</span> 
+								<span class="topic">DISTRICTS PRELIMS</span>
 								<div class="block-text">
 									<p>8:00 AM - BREAKFAST</p>
+									<p>9:00 AM - SWAGS AND PHOTOS</p>
+									<p>11:00 AM - WORKSHOP</p>
+									<p>12:30 PM - LUNCH</p>
+									<p>2:00 PM - MENTORING SESSION 1</p>
+								</div>
+							</div>
+							<div class="block-detail">
+								<span class="time">January 27th - 28th</span> 
+								<span class="topic">STATE FINALS</span>
+								<div class="block-text">
+									<h6>DAY 1</h6>
+									<p>9:00 AM - SWAGS AND PHOTOS</p>
+									<p>11:00 AM - WORKSHOP</p>
+									<p>12:30 PM - LUNCH</p>
+									<p>2:00 PM - PRESENTATIOSAND CLOSING CEREMONY</p>
+								</div>
+								<div class="block-text">
+									<h6>DAY 2</h6>
 									<p>9:00 AM - SWAGS AND PHOTOS</p>
 									<p>11:00 AM - WORKSHOP</p>
 									<p>12:30 PM - LUNCH</p>
@@ -666,8 +685,8 @@
 				<!--Row-->
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 mb-50 text-center ">
-						<h1 class="title">Our Sponsors </h1>
-						<p class="title-lead mt-10 mb-20">For further info about sponsoring feel free to get in touch with us</p>
+						<h1 class="title">Organizers</h1>
+						<!-- <p class="title-lead mt-10 mb-20">For further info about sponsoring feel free to get in touch with us</p> -->
 						<a href="https://drive.google.com/file/d/1rjGdaV5PZ-qHIU6eRRnYxtdsFkBltzaT/view?usp=sharing" class="but mt-30"> Download Our Sponsorship Brochure Here</a>
 					</div>
 				</div>
@@ -824,8 +843,11 @@
 				<div class="container ">
 					<div class="row">
 						<div class="col-md-6">
-							<p class="gradient-text"> &copy; Made with 🖤 Meenachil / Meen Hacks V1 Team</p>
-							<a class="gradient-text scroll" href=mailto:meenhacks@gmail.com>Contact us</a>
+							<p class="gradient-text">Made with 🖤 IIIT-Bhubaneswar Official Team</p>
+							<!-- <a class="gradient-text scroll">Contact us</a> -->
+							<p class="gradient-text">Gothapatna, PO: Malipada, Bhubaneswar-751003, IN</p>
+							<p class="gradient-text">offdean@iiit-bh.ac.in</p>
+							<p class="gradient-text">+91 674-2653-300</p>
 						</div>
 						<div class="col-md-6">
 							<ul class="block-legal">
