images added and changed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<ul class="slides">
 					<li>
 						<div class="background-img">
-							<img src="img/back1.jpeg" alt="">
+							<img src="img/wallpaperflare.com_wallpaper.jpg" alt="">
 						</div>
 					</li>
 				</ul>
@@ -309,9 +309,12 @@
 									IIIT Bhubaneswar has a great coding and developer environment with its various clubs like Google Developer 
 									Student's Club, Programming Society, The Automation and Robotics Society along with various other technical 
 									and non-technical clubs that is run by and for the students.</p>
-								<!-- <h4 class="mb-10">A WORD ON DIVERSITY</h4>
-								<p class="title-lead mt-30">Meenachil Hacks is focused on Community Development and Diversity. We believe everyone should be given equal chance and none should be excluded rom technology. As a support to diversity,
-									there are special prizes and swags for Women Participants</p> -->
+								<!-- <h4 class="mb-10">A WORD ON DIVERSITY</h4>-->
+								<p class="title-lead mt-30">
+									This event is organised in conjunction with the Higher Education Department
+									of Odisha along with Govt. of Odisha. Various special guests will be present
+									at the event representing the various departments that are organising this event.  
+								</p> 
 
 							</div>
 
@@ -773,10 +776,11 @@
 				<!--End container-->
 		</section>
 		<!--End sponser section-->
-		<!-- <section id="" class="register pt-200 pb-200 overlay">
+		<section id="" class="register pt-200 pb-200 overlay">
 			<div class="background-img ">
-				<img src="img/KidangoorCollege.jpg" alt="">
-		</section> -->
+				<img src="img/20220228_093513.jpg" alt="">
+			</div>
+		</section>
 		<!--Contact section-->
 		<section id="location" class="location pb-200" style="padding-top: 50px;display: flex;justify-content: center;">
 			<div style="max-width:1000px; flex:1; margin: auto 50px;">
@@ -801,7 +805,7 @@
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 mb-50 text-center ">
 						<h1 class="title">Our Clubs </h1>
-						<p class="title-lead mt-10 mb-20">The BackBone of the Whole Event</p>
+						<p class="title-lead mt-10 mb-20">Organizing Clubs of IIIT-Bh</p>
 					</div>
 				</div>
 				<!--End row-->
@@ -814,17 +818,19 @@
 					<div class="col-sm-12 text-center">
 						<div class="col-md-2 col-sm-2 ">
 							<div class="block-club">
-								<img src="img/techSocLogo.png" alt="Tech Society">
+								<div class="title-lead">Tech Society</div>
+								<img src="img/techSocLogo.png" height="200" width="410" alt="Tech Society">
 							</div>
 						</div>
 						<div class="col-md-2 col-sm-2">
 							<div class="block-club-1 ">
+								<div class="title-lead">Programming Society</div>
 								<img src="img/psoc_transparent.png" height="200" width="410" alt="PSoc">
-
 							</div>
 						</div>
 						<div class="col-md-2 col-sm-2">
 							<div class="block-club">
+								<div class="title-lead">Entrepreneurship Cell</div>
 								<img src="img/e-cell.png" height="200" width="410" alt="E-Cell">
 							</div>
 						</div>
