--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 					<div class="row">
 						<img class="logo-default" src="img/logo/MHACKS_transp.png" alt="logo" />
 						<h4>MORE THAN AN IDEATHON</h4>
-						<p class="gradient-text"><strong> Registrations are Open</strong></p>
-						<a href="https://www.yepdesk.com/meenachil-hacks" class="but scroll "> Register Now</a>
+						<p class="gradient-text"><strong>Student Registrations will open shortly</strong></p>
+						<a href="https://www.yepdesk.com/meenachil-hacks" class="but scroll "> Register for orientation</a>
 					</div>
 				</div>
 				<!--End row-->
@@ -112,7 +112,7 @@
 						<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="5.1983" y1="28.1187" x2="43.4067" y2="11.702">
 							<stop offset="0" style="stop-color:#399BFF" />
 							<stop offset="1" style="stop-color:#EE71F9" />
-							<h1 class="title">About this event</h1>
+							<h1 class="title">About the event</h1>
 						</linearGradient>
 						<p class="title-lead mt-10">An ideathon based on renewable energy for higher secondary students 
 							that involves events and activities designed to encourage students to come up 
@@ -127,8 +127,8 @@
 							The participants will compete among all students from all over the 30
 							districts of odisha. So buckle up and get ready to rack your brains! 
 						</p>
-						<p class="title-lead mt-30">All activities are enforced with our<br>
-							<h5 class="gradient-text"><a class="title-lead mt-20" href="https://github.com/meenhacks/Code-of-Conduct/blob/master/code-of-conduct.md">Code of Conduct</a></h5>
+						<p class="title-lead mt-30">Find all details abut the event here<br>
+							<h5 class="gradient-text"><a class="title-lead mt-20" href=#>Event Booklet</a></h5>
 						</p>
 					</div>
 				</div>
@@ -407,8 +407,8 @@
 								<div class="block-info-2">
 									<p>
 										<strong>Prof. Dr. Debashish Jena</strong>
-										<span>Head of Dept. CSE</span>
-										<span>College of Engineering Kidangoor</span>
+										<span>Registrar</span><br>
+										<span>International Institute of Information Technology Bhubaneswar</span>
 									</p>
 
 								</div>
@@ -419,12 +419,13 @@
 						<div class="block-speaker">
 							<div class="block-img overlay soft">
 								<div class="background-img">
-									<!--  --><img src="img/3.jpg" alt="">
+									<img src="img/3.jpg" alt="">
 								</div>
 								<div class="block-info-2">
 									<p>
-										<strong>To be Declared</strong>
-										<span>TBD</span>
+										<strong>Prof. Dr. Sabyasachi Patra</strong><br>
+										<span>Asst. Professor</span><br>
+										<span>International Institute of Information Technology Bhubaneswar</span>
 									</p>
 								</div>
 							</div>
@@ -438,8 +439,9 @@
 								</div>
 								<div class="block-info-2">
 									<p>
-										<strong>To be Declared</strong>
-										<span>TBD</span>
+										<strong>Prof. TBD</strong><br>
+										<span>Head of Dept. XYZ</span><br>
+										<span>International Institute of Information Technology Bhubaneswar</span>
 									</p>
 
 								</div>
@@ -508,16 +510,16 @@
 			</section>
 			<!--End Workshop session-->
 			<!-- <section id="schedule" class="schedule pt-120 pb-120">
-		 <!--Container>
+		 <Container>
             <div class="container">
-               <!--Row
+               Row
                <div class="row">
                   <div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
                      <h1 class="title">EVENT SHEDULE</h1>
                      <p class="title-lead mt-10">The Complete shedule will be mailed after registration. <br>Register Now!! </p>
                   </div>
                </div>
-	       <!--End row-->
+	       End row-->
 	</div>
 	<!--End container-->
 	<!--Container-->
