--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link href="css/fonts.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,700" rel="stylesheet">
-	<link rel="icon" href="img/logo/MHACKS_logo.png">
+	<link rel="icon" href="img/logo/Oriya_preneur-removebg-preview.png">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
 					<div class="row">
 						<div class="col-md-2">
 							<a class="scroll logo" href="#wrapper">
-								<img class="logo-default" src="img/logo/MHACKS_logo.png" height="120" width="35" alt="logo" />
+								<img class="logo-default" src="img/logo/Oriya_preneur-removebg-preview.png" height="120" width="35" alt="logo" />
 							</a>
 						</div>
 						<div class="col-md-10 text-right">
@@ -89,10 +89,10 @@
 				<div class="container hero-content">
 					<!--Row-->
 					<div class="row">
-						<img class="logo-default" src="img/logo/MHACKS_transp.png" alt="logo" />
+						<img class="logo-default" src="img/logo/Odiyapreneur-textless-removebg.png" alt="logo" />
 						<h4>MORE THAN AN IDEATHON</h4>
 						<p class="gradient-text"><strong>Student Registrations will open shortly</strong></p>
-						<a href="https://www.yepdesk.com/meenachil-hacks" class="but scroll "> Register for orientation</a>
+						<a href=# class="but scroll "> Register for orientation</a>
 					</div>
 				</div>
 				<!--End row-->
@@ -128,7 +128,7 @@
 							districts of odisha. So buckle up and get ready to rack your brains! 
 						</p>
 						<p class="title-lead mt-30">Find all details abut the event here<br>
-							<h5 class="gradient-text"><a class="title-lead mt-20" href=#>Event Booklet</a></h5>
+							<h2 class="gradient-text"><a class="title-lead mt-20" href=#>Event Booklet</a></h2>
 						</p>
 					</div>
 				</div>
@@ -458,20 +458,20 @@
 
 			<!--End speakers section-->
 
-			<!--Workshop Sessions-->
+			<!--Workshop Sessions
 			<section id="workshop" class="speakers pt-120 brd-bottom">
-				<!--Container-->
+				Container
 				<div class="container">
-					<!--Row-->
+					Row
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
 							<h1 class="title">Workshops</h1>
 							<p class="title-lead mt-10">Whats a Hackathon without a Workshop or Two?<br>Learn Something New...</p>
 						</div>
 					</div>
-					<!--End row-->
+					End row
 				</div>
-				<!--End container-->
+				End container
 				<div class="container block-content">
 					<div class="row">
 						<div class="col-sm-3 pd-0">
@@ -511,7 +511,7 @@
 						</div>
 						</div>
 			</section>
-			<!--End Workshop session-->
+			Workshop session-->
 			<!-- <section id="schedule" class="schedule pt-120 pb-120">
 		 <Container>
             <div class="container">
@@ -692,7 +692,7 @@
 					<div class="col-sm-8 col-sm-offset-2 mb-50 text-center ">
 						<h1 class="title">Organizers</h1>
 						<!-- <p class="title-lead mt-10 mb-20">For further info about sponsoring feel free to get in touch with us</p> -->
-						<a href="https://drive.google.com/file/d/1rjGdaV5PZ-qHIU6eRRnYxtdsFkBltzaT/view?usp=sharing" class="but mt-30"> Download Our Sponsorship Brochure Here</a>
+						<a href="https://drive.google.com/file/d/1rjGdaV5PZ-qHIU6eRRnYxtdsFkBltzaT/view?usp=sharing" class="but mt-30"> Learn more about the organisers</a>
 					</div>
 				</div>
 				<!--End row-->
@@ -704,18 +704,18 @@
 				<div class="row">
 					<div class="vertical-center">
 						<div class="block-sponsor">
-							<a href="https://github.com"><img src="img/GitHub_Logo_White.png" alt=""></a>
+							<a href="https://github.com"><img src="img/psoc_transparent.png" alt=""></a>
 							<span><strong>Title Sponsor</strong></span>
 						</div>
 						<div class="block-sponsor">
-							<img src="img/tink_new.png" height="200" width="410" alt="">
+							<img src="img/psoc_transparent.png" height="200" width="410" alt="">
 						</div>
 
 						<div class="block-sponsor">
-							<img src="img/edccek.jpg" height="200" width="410" alt="">
+							<img src="img/psoc_transparent.png" height="200" width="410" alt="">
 						</div>
 						<div class="block-sponsor">
-							<img src="img/jb.svg" height="1000" width="410" alt="">
+							<img src="img/psoc_transparent.png" height="1000" width="410" alt="">
 						</div>
 					</div>
 				</div>
@@ -723,17 +723,17 @@
 					<div class="row">
 						<div class="vertical-center">
 							<div class="block-sponsor">
-								<img src="img/devfolio.png" height="1000" width="410" alt="">
+								<img src="img/psoc_transparent.png" height="1000" width="410" alt="">
 							</div>
 							<div class="block-sponsor">
-								<img src="img/cblogo.png" height="600" width="300" alt="">
+								<img src="img/psoc_transparent.png" height="600" width="300" alt="">
 								<span><strong>Coding Partner</strong></span>
 							</div>
 							<div class="block-sponsor">
-								<img src="https://media.balsamiq.com/files/company/balsamiq-logo-noborder-screen.png" alt="">
+								<img src="img/psoc_transparent.png" alt="">
 							</div>
 							<div class="block-sponsor">
-								<img src="img/cflo.jpg" alt="">
+								<img src="img/psoc_transparent.png" alt="">
 							</div>
 							
 						</div>
@@ -741,18 +741,18 @@
 					<div class="row">
 						<div class="vertical-center">
 							<div class="block-sponsor">
-								<img src="img/stickermule.png" alt="stickermule">
+								<img src="img/psoc_transparent.png" alt="stickermule">
 								<span><strong>Sticker Partner</strong></span>
 							</div>
 							<div class="block-sponsor">
-								<img src="img/sketch.png" alt="Sketch">
+								<img src="img/psoc_transparent.png" alt="Sketch">
 							</div>
 							<div class="block-sponsor">
-								<img src="img/yepdesk.png" alt="Yepdesk">
+								<img src="img/psoc_transparent.png" alt="Yepdesk">
 								<span><strong>Platform Sponsor</strong></span>
 							</div>
 							<div class="block-sponsor">
-								<img src="img/Gatsby_Monogram.png" height="150" width="150" alt=""><br/>
+								<img src="img/psoc_transparent.png" height="150" width="150" alt=""><br/>
 								<span><strong>&nbsp;&nbsp;&nbsp;Workshop Partner</strong></span>
 							</div>
 						</div>
@@ -766,7 +766,7 @@
 								
 							</div>
 							<div class="block-sponsor">
-								<img src="img/msg91.png" alt="MSG91">
+								<img src="img/psoc_transparent.png" alt="MSG91">
 								<span><strong>Messaging partner</strong></span>
 							</div>
 							<div class="block-sponsor">
@@ -807,7 +807,7 @@
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 mb-50 text-center ">
 						<h1 class="title">Our Clubs </h1>
-						<p class="title-lead mt-10 mb-20">Organizing Clubs of IIIT-Bh</p>
+						<p class="title-lead mt-10 mb-20">Organizing Clubs of IIIT-Bhubaneswar</p>
 					</div>
 				</div>
 				<!--End row-->
@@ -865,7 +865,7 @@
 						</div>
 						<div class="col-md-6">
 							<ul class="block-legal">
-								<li><span><a class="gradient-text scroll" href="https://github.com/meenhacks/Code-of-Conduct/blob/master/code-of-conduct.md">Code of Conduct</a></span></li>
+								<li><span><a class="gradient-text scroll" href="#">Event Booklet</a></span></li>
 							</ul>
 						</div>
 						<div class="col-md-6 ">
