updated schedule, schedule and mentors section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<!-- Metas -->
 	<meta charset="utf-8">
-	<title>Odiapreneur</title>
+	<title>Odiapreneur: A unique event for higher secondary students of Odisha</title>
 	<meta name="description" content="An ideathon for higher secondary students">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-site-verification" content="ntUFSe18AqnePAZFrbNZ5cSVRyXndF_cBrPCwZgZ4CY" />
@@ -70,10 +70,11 @@
 									<li><a class="scroll" href="#wrapper">Home</a></li>
 									<li><a class="scroll" href="#about">About</a></li>
 									<!-- <li><a class="scroll" href="https://docs.google.com/document/d/1970fadrLpnqHc4Kgky58sbQ4qTVejZ5OXrOkqhX62KI/edit?usp=sharing">Rules</a></li> -->
-									<li><a class="scroll" href="#mentors">Judges & Mentors</a></li>
-									<li><a class="scroll" href="#workshop">Workshop</a></li>
+									<li><a class="scroll" href="#mentors">Mentors</a></li>
+									<li><a class="scroll" href="#speakers">Judging Criterias</a></li>
 									<li><a class="scroll" href="#prizes">Prizes</a></li>
 									<li><a class="scroll" href="#sponsors">Organizers</a></li>
+									<li><a class="scroll" href="#contact">Contact Us</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -91,8 +92,8 @@
 					<div class="row">
 						<img class="logo-default" src="img/logo/Odiyapreneur-textless-removebg.png" alt="logo" />
 						<h4>MORE THAN AN IDEATHON</h4>
-						<p class="gradient-text"><strong>Student Registrations will open shortly</strong></p>
-						<a href=# class="but scroll "> Register for orientation</a>
+						<!-- <p class="gradient-text"><strong>Student Registrations will open shortly</strong></p> -->
+						<!-- <a href=# class="but scroll "> Register for orientation</a> -->
 					</div>
 				</div>
 				<!--End row-->
@@ -112,7 +113,7 @@
 						<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="5.1983" y1="28.1187" x2="43.4067" y2="11.702">
 							<stop offset="0" style="stop-color:#399BFF" />
 							<stop offset="1" style="stop-color:#EE71F9" />
-							<h1 class="title">About the event</h1>
+							<h1 class="title mb-100">About the event</h1>
 						</linearGradient>
 						<p class="title-lead mt-10">An ideathon based on renewable energy for higher secondary students 
 							that involves events and activities designed to encourage students to come up 
@@ -127,8 +128,8 @@
 							The participants will compete among all students from all over the 30
 							districts of odisha. So buckle up and get ready to rack your brains! 
 						</p>
-						<p class="title-lead mt-30">Find all details abut the event here<br>
-							<h2 class="gradient-text"><a class="title-lead mt-20" href=#>Event Booklet</a></h2>
+						<p class="title-lead mt-30">Find all details abut the event here: <br>
+							<h2 class="gradient-text mt-10"><a class="title-lead" href=# style="font-size: 17px;">Event Booklet</a></h2>
 						</p>
 					</div>
 				</div>
@@ -189,7 +190,7 @@
 							</svg>
 							<p>
 								<strong>DATE</strong><br>
-								<span>January 27th - 28th</span>
+								<span  style="font-size: 17px;">January 27th - 28th</span>
 							</p>
 						</div>
 					</div>
@@ -227,7 +228,7 @@
 							</svg>
 							<p>
 								<strong>LOCATION</strong><br>
-								<span>IIIT Bhubaneswar</span>
+								<span style="font-size: 17px;">IIIT Bhubaneswar</span>
 							</p>
 						</div>
 					</div>
@@ -263,8 +264,8 @@
 							  C1,21.633,1.224,21.857,1.5,21.857z" />
 							</svg>
 							<p>
-								<strong>Problem Statements</strong>
-								<span>Renewable Energy</span>
+								<strong>Problem Statements</strong><br>
+								<span style="font-size: 17px;"><a href="#" class="gradient-text">15 problem statements</a></span>
 							</p>
 						</div>
 					</div>
@@ -285,7 +286,7 @@
 					<!--Row-->
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 mb-100 text-center ">
-							<h1 class="title">ABOUT </h1>
+							<h1 class="title">Organising Committee </h1>
 							<!-- <p class="title-lead mt-10 mb-20">Some frequently asked questions for you.</p> -->
 						</div>
 					</div>
@@ -297,9 +298,7 @@
 					<!--Row-->
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 ">
-							<div class="block-faq mb-50">
-								<h4 class="mb-10">ABOUT THE ORGANIZING COMMITTEE</h4>
-
+							<div class="block-faq" style="text-align: center;">
 								<p class="title-lead mb-30">International Institute of Information Technology (IIIT) Bhubaneswar is a technical 
 									institute located in the city of Bhubaneswar, Odisha. It was established in the year 2006 as a 
 									joint venture between the Government of India, the Government of Odisha, and the industry partner, 
@@ -315,9 +314,7 @@
 									of Odisha along with Govt. of Odisha. Various special guests will be present
 									at the event representing the various departments that are organising this event.  
 								</p> 
-
 							</div>
-
 						</div>
 					</div>
 					<!--End row-->
@@ -335,15 +332,33 @@
 					<!--Row-->
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
-							<h1 class="title">Mentors</h1>
-							<p class="title-lead mt-10">We are bringing you the perfect combination of content and experience to ignite your <br>heart, equip your mind and spark your skill.</p>
+							<h1 class="title mb-100">Mentors</h1>
+							<p class="title-lead">
+								We are bringing you the perfect combination of 
+								content and experience to ignite your <br>
+								heart, equip your mind and spark your skill.
+							</p>
+							<h4 class="gradient-text mt-30" style="font-size: 20px;">DISTRICT LEVEL MENTORS</h4>
+							<p class="title-lead mt-30">
+								The mentoring team will consist of students currently 
+								pursuing BTech and PHd alike from IIIT-Bh along with 
+								faculty members and some Govt. officials from the Higher Secondary
+								department.
+							</p>
+							<h4 class="gradient-text mt-30" style="font-size: 20px;">STATE LEVEL MENTORS</h4>
+							<p class="title-lead mt-30">
+								The team will consist of industry experts from different companies
+								like <strong>DELL</strong> and <strong>IBM</strong> along with members
+								from Higher Edication department of Govt. and some IIIT mentors from
+								previous rounds.
+							</p>
 						</div>
 					</div>
 					<!--End row-->
 				</div>
 				<!--End container-->
 				<div class="container block-content">
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-sm-3 pd-0">
 						<div class="block-speaker">
 							<div class="block-img overlay soft">
@@ -374,15 +389,11 @@
 										<strong>The TinkerHub Foundation</strong>
 										<span>Community</span>
 									</p>
-									<!-- <ul class="block-social">
-                              <li><a href="https://www.facebook.com/josephjoshyk"><i class="icon-facebook"></i></a></li>
-                              <li><a href="https://www.linkedin.com/in/joseph-joshy-3816918a/"><i class="icon-linkedin"></i></a></li>
-                           </ul> -->
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</section>
 
 			<!--Speakers section-->
@@ -392,14 +403,14 @@
 					<!--Row-->
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2 mb-100 text-center">
-							<h1 class="title">JUDGES</h1>
+							<h1 class="title mb-100">Judging Criterias</h1>
 							<!-- <p class="title-lead mt-10">We are bringing you the perfect combination of content and experience to ignite your <br>heart equip your mind and spark your skill.</p> -->
 						</div>
 					</div>
 					<!--End row-->
 				</div>
 				<!--End container-->
-				<div class="container block-content judges">
+				<!-- <div class="container block-content judges">
 					<div class="row">
 					<div class="col-sm-3 pd-0">
 						<div class="block-speaker">
@@ -453,7 +464,7 @@
 					</div>
 				</div>
 
-				</div>
+				</div> -->
 			</section>
 
 			<!--End speakers section-->
@@ -529,7 +540,7 @@
 
 	<!--End container-->
 	<Container>
-		<div class="container schedule">
+		<div class="container schedule mt-50">
 			<!--Row-->
 			<div class="row">
 
@@ -537,48 +548,53 @@
 					<ul class="block-tab">
 						<!--Tab-->
 						<li class="active ">
-							<div class="block-date"><i class="et-line-calendar"></i><strong>SCHEDULE OUTLINE</strong> <span> December '22 - January '23</span></div>
+							<div class="block-date"><i class="et-line-calendar"></i><strong>SCHEDULE OUTLINE</strong> <span style="padding-left: 20px;">December 2022 - January 2023</span></div>
 							<div class="block-detail">
 								<span class="time">December 23rd</span>
-								<span class="topic">COMMENCING ORIENTATION</span>
+								<span class="topic">ORIENTATION</span>
 								<div class="block-text">
-									<p>10:00 AM</p>
+									<!-- <p>10:00 AM</p> -->
 									<p>The guests include -</p>
-									<p>The event witnesses select 30 Deans/Principals form each district</p>
-									<p>11:30 AM - TEA and SNACKS</p>
-									<p>12:00 PM - GAMES AND ACTIVITIES</p>
-									<p>8:30 PM - DINNER </p>
-									<p>12:15 AM - WORKSHOP</p>
-									<p>2:00 PM - BREAK(IF AWAKE)</p>
+									<p>- 30 Deans/Principals from each district</p>
+									<p>- 30 District Education officers / representatives from each district</p>
+									<p>- Student teams from each district along with faculty representative</p>
+									<p>11:00 AM - ORIENTATION</p>
+									<p>11:30 AM - RELEASE OF PROBLEM STATEMENTS</p>
+									<p>12:30 PM - TIMELINE OF THE EVENT </p>
+									<p>12:45 AM - SHARING OF BOOKLET</p>
+									<p>1:00 PM - FAQ</p>
 								</div>
 							</div>
 							<div class="block-detail">
-								<span class="time">January 13th - 14th</span> 
-								<span class="topic">DISTRICTS PRELIMS</span>
+								<span class="time">January 7th - 14th</span> 
+								<span class="topic">DISTRICT PRELIMS</span>
 								<div class="block-text">
-									<p>8:00 AM - BREAKFAST</p>
-									<p>9:00 AM - SWAGS AND PHOTOS</p>
-									<p>11:00 AM - WORKSHOP</p>
-									<p>12:30 PM - LUNCH</p>
-									<p>2:00 PM - MENTORING SESSION 1</p>
+									<p>Building phase for the teams begin</p>
+									<p>Teams have to present their prepared solution / showcase their product</p>
+									<p>Teams will be judged on various criterias</p>
+									<p>The Mentoring / Judging teams will be jury along with some 
+										representatives from their schools
+									</p>
 								</div>
 							</div>
 							<div class="block-detail">
 								<span class="time">January 27th - 28th</span> 
 								<span class="topic">STATE FINALS</span>
 								<div class="block-text">
-									<h6>DAY 1</h6>
+									<p>Qualified teeams from each district have to present in this round</p>
+									<p>Final round of the event held at IIIT-Bh</p>
+									<h6 class="pt-10">DAY 1</h6>
 									<p>9:00 AM - SWAGS AND PHOTOS</p>
 									<p>11:00 AM - WORKSHOP</p>
 									<p>12:30 PM - LUNCH</p>
-									<p>2:00 PM - PRESENTATIOSAND CLOSING CEREMONY</p>
+									<p>2:00 PM - FINAL ROUND OF PRESENTATIONS</p>
 								</div>
 								<div class="block-text">
 									<h6>DAY 2</h6>
-									<p>9:00 AM - SWAGS AND PHOTOS</p>
-									<p>11:00 AM - WORKSHOP</p>
-									<p>12:30 PM - LUNCH</p>
-									<p>2:00 PM - PRESENTATIOSAND CLOSING CEREMONY</p>
+									<p>10:00 AM - CLOSING CEREMONY</p>
+									<p>11:00 AM - SPEAKERS' FINAL NOTES</p>
+									<p>12:00 PM - ANNOUNCEMENT OF WINNERS</p>
+									<p>1:00 PM - PHOTO SESSIONS</p>
 								</div>
 							</div>
 						</li>
@@ -616,7 +632,7 @@
 						<div class="review-slider flexslider">
 							<ul class="slides">
 								<li>
-									<blockquote>Teams can be of 3-5 Members</blockquote>
+									<blockquote>Teams can be of 3-4 Members</blockquote>
 								</li>
 								<li>
 									<blockquote>You Have to Register Online and Pay Online a Fee of 400Rs.</blockquote>
@@ -625,7 +641,7 @@
 									<blockquote>Bring What You Need.Laptops, ToothBrushes, Chargers, Cables, Clothes and a Geeky tshirt</blockquote>
 								</li>
 								<li>
-									<blockquote>We'll Provide a Tshirt, Food and Swags</blockquote>
+									<blockquote>Create a product / </blockquote>
 								</li>
 							</ul>
 							<a href="https://www.yepdesk.com/meenachil-hacks" class="but mt-30"> Register Now</a>
@@ -684,7 +700,7 @@
 		</section>
 		<!--End register section-->
 		<!--Sponsor section-->
-		<section class="sponser pt-90 pb-90 brd-bottom">
+		<section class="sponser pt-50 pb-90 brd-bottom">
 			<!--Container-->
 			<div class="container">
 				<!--Row-->
@@ -784,20 +800,29 @@
 			</div>
 		</section>
 		<!--Contact section-->
-		<section id="location" class="location pb-200" style="padding-top: 50px;display: flex;justify-content: center;">
-			<div style="max-width:1000px; flex:1; margin: auto 50px;">
-				<!-- <iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.1553918048503!2d76.61903831430942!3d9.667760993079403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07d293a982ceeb%3A0xd62bf193983589fe!2sCollege+of+Engineering%2C+Kidangoor!5e0!3m2!1sen!2sin!4v1515608280993"
-					height="600" frameborder="0" allowfullscreen></iframe> -->
-					<iframe
-						src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3742.1333357361545!2d85.7433963!3d20.2947474!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1907923fc9c557%3A0xd3b0b05336a9dfaa!2sInternational%20Institute%20of%20Information%20Technology%20Bhubaneswar!5e0!3m2!1sen!2sin!4v1671446199586!5m2!1sen!2sin"
-						height="600" style="border:0;" allowfullscreen loading="lazy"
-						referrerpolicy="no-referrer-when-downgrade"></iframe>
+		<section id="contact" class="contact" style="padding-top: 70px;">
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2 mb-50 text-center ">
+					<h1 class="title">Contact Us</h1>
+					<p class="title-lead mt-10 mb-20">Reach out to us</p>
+					<h4 class="gradient-text mt-30" style="font-size: 20px;">Email: <a href="mailto:offdean@iiit-bh.ac.in"><span style="text-transform: lowercase;">offdean@iiit-bh.ac.in</span></a></h4>
+					<h4 class="gradient-text mt-30" style="font-size: 20px;">Phone: <a href="tel:+916742653300"><span style="text-transform: lowercase;">+91 674-2653-300</a></span></h4>
+				</div>
 			</div>
+
+		</section>
+
+		<section id="location" class="location pb-200" style="display: flex; justify-content: center; text-align: center;">
+			<div style="max-width:1000px; flex:1; margin: auto 50px;">
+				<p class="gradient-text pb-30" style="font-size: 20px;">LOCATION</p>
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3742.1333357361545!2d85.7433963!3d20.2947474!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1907923fc9c557%3A0xd3b0b05336a9dfaa!2sInternational%20Institute%20of%20Information%20Technology%20Bhubaneswar!5e0!3m2!1sen!2sin!4v1671446199586!5m2!1sen!2sin"
+					height="300" style="border:0;" allowfullscreen loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
 		</section>
 		<!--End contact section-->
 		<!--Accom section-->
-		</section>
 		<!--End register section-->
 		<!--Sponsor section-->
 		<section class="sponser pt-100 pb-100">
@@ -851,26 +876,26 @@
 		<!--End accom section-->
 
 		<!--Faq section-->
-		<footer class="pt-120  bg-dark">
-			<div class="bottom-footer bg-black pt-50 pb-50">
+		<footer class="bg-dark">
+			<div class="bottom-footer bg-black pb-50" style="padding-top: 60px;">
 				<!--Container-->
 				<div class="container ">
 					<div class="row">
 						<div class="col-md-6">
-							<p class="gradient-text">Made with 🖤 IIIT-Bhubaneswar Official Team</p>
+							<p class="gradient-text" style="font-size: 17px;">Made with 🖤 IIIT-Bhubaneswar Official Team</p>
 							<!-- <a class="gradient-text scroll">Contact us</a> -->
-							<p class="gradient-text">Gothapatna, PO: Malipada, Bhubaneswar-751003, IN</p>
-							<p class="gradient-text">offdean@iiit-bh.ac.in</p>
-							<p class="gradient-text">+91 674-2653-300</p>
+							<p class="gradient-text" style="font-size: 17px;">Gothapatna, PO: Malipada, Bhubaneswar-751003, IN</p>
+							<p class="gradient-text" style="font-size: 17px;">offdean@iiit-bh.ac.in</p>
+							<p class="gradient-text" style="font-size: 17px;">+91 674-2653-300</p>
 						</div>
 						<div class="col-md-6">
 							<ul class="block-legal">
-								<li><span><a class="gradient-text scroll" href="#">Event Booklet</a></span></li>
+								<li><span><a class="gradient-text scroll" style="font-size: 17px;" href="#">Event Booklet</a></span></li>
 							</ul>
 						</div>
 						<div class="col-md-6 ">
 							<ul class="block-legal">
-								<li><span><a class="gradient-text scroll" href="#wrapper">Back To Top</a></span></li>
+								<li><span><a class="gradient-text scroll" style="font-size: 17px;" href="#wrapper">Back To Top</a></span></li>
 								<!-- <li><span><a class="gradient-text scroll" >Anand PS (EVENT COORDINATOR) 9061193652</a></span></li>
                            <li><span><a class="gradient-text scroll" >MAIL ID : anand.p.s@ieee.org</a></span></li> -->
 							</ul>
