--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 						</div>
 					</div> -->
 					<div class="col-sm-12">
-						<h4 class="gradient-text mt-10" style="font-size: 20px;">DISTRICT LEVEL PRIZES</h4>
+						<h4 class="gradient-text mt-10" style="font-size: 20px; text-align: center;">DISTRICT LEVEL PRIZES</h4>
 						<div class="col-sm-4">
 							<ul class="block-tickets active">
 								<li>
@@ -633,7 +633,7 @@
 					</div>
 				</div>
 				<div class="col-sm-12 ">
-					<h4 class="gradient-text mt-10" style="font-size: 20px;">STATE LEVEL PRIZES</h4>
+					<h4 class="gradient-text mt-10" style="font-size: 20px; text-align: center;">STATE LEVEL PRIZES</h4>
 					<div class="col-sm-4">
 						<ul class="block-tickets active">
 							<li>
@@ -673,7 +673,7 @@
 		</section>
 		<!--End register section-->
 		<!--Sponsor section-->
-		<section class="sponser pt-50 pb-90 brd-bottom">
+		<section class="sponser pb-90 brd-bottom">
 			<!--Container-->
 			<div class="container">
 				<!--Row-->
