logo update and external links added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
 	<!-- Metas -->
 	<meta charset="utf-8">
 	<title>Odiapreneur: A unique event for higher secondary students of Odisha</title>
-	<meta name="description" content="An ideathon for higher secondary students">
+	<meta name="description" content="A hybrid ideathon for higher secondary students of Odisha">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-site-verification" content="ntUFSe18AqnePAZFrbNZ5cSVRyXndF_cBrPCwZgZ4CY" />
 	<!-- Css -->
@@ -93,7 +91,7 @@
 						<img class="logo-default" src="img/logo/logoWithText.svg" alt="logo" />
 						<h4 style="font-size: 20px;">MORE THAN AN IDEATHON</h4>
 						<!-- <p class="gradient-text"><strong>Student Registrations will open shortly</strong></p> -->
-						<!-- <a href=# class="but scroll "> Register for orientation</a> -->
+						<a href="#" class="but scroll mt-30"> REGISTER FOR THE EVENT</a>
 					</div>
 				</div>
 				<!--End row-->
@@ -104,7 +102,7 @@
 		</section>
 		<!--End hero section-->
 		<!--About section-->
-		<section id="about" class="about pt-120 pb-120 brd-bottom">
+		<section id="about" class="about pt-120 pb-120">
 			<!--Container-->
 			<div class="container">
 				<!--Row-->
@@ -129,7 +127,11 @@
 							districts of odisha. So buckle up and get ready to rack your brains! 
 						</p>
 						<p class="title-lead mt-30">Find all details abut the event here: <br>
-							<h2 class="gradient-text mt-10"><a class="title-lead" href=# style="font-size: 17px;">Event Booklet</a></h2>
+							<h2 class="gradient-text mt-10">
+								<a class="title-lead" href="https://docs.google.com/document/d/1BIFfQq3fqwnxRRo_LEjixuAe35_Jm-ts/edit?usp=sharing&ouid=109970193768028404619&rtpof=true&sd=true" target="_blank" style="font-size: 17px;">
+									Event Booklet
+								</a>
+							</h2>
 						</p>
 					</div>
 				</div>
@@ -265,7 +267,11 @@
 							</svg>
 							<p>
 								<strong>Problem Statements</strong><br>
-								<span style="font-size: 17px;"><a href="#" class="gradient-text">15 problem statements</a></span>
+								<span style="font-size: 17px;">
+									<a href="https://drive.google.com/file/d/1-AGFp_Fg6QqyCfJ0EVTZEMg4nHVaTXN4/view?usp=sharing" target="_blank" class="gradient-text">
+										15 problem statements
+									</a>
+								</span>
 							</p>
 						</div>
 					</div>
@@ -284,7 +290,7 @@
 			<!--End faq section-->
 
 			<!--End about section-->
-			<section id="mentors" class="speakers pt-120 brd-bottom">
+			<section id="mentors" class="speakers pt-120">
 				<!--Container-->
 				<div class="container">
 					<!--Row-->
@@ -355,7 +361,7 @@
 			</section>
 
 			<!--Speakers section-->
-			<section id="speakers" class="speakers pt-120 brd-bottom">
+			<section id="speakers" class="speakers pt-120">
 				<!--Container-->
 				<div class="container">
 					<!--Row-->
@@ -397,7 +403,7 @@
 			<!--End speakers section-->
 
 			<!--Workshop Sessions
-			<section id="workshop" class="speakers pt-120 brd-bottom">
+			<section id="workshop" class="speakers pt-120">
 				Container
 				<div class="container">
 					Row
@@ -467,7 +473,7 @@
 
 	<!--End container-->
 	<Container>
-		<div class="container schedule mt-50">
+		<div class="container schedule">
 			<!--Row-->
 			<div class="row">
 				<div class="col-sm-8">
@@ -687,7 +693,7 @@
 				<!--End row-->
 			</div>
 			<!--End container-->
-			<section id="faq" class="faq pt-120 pb-120 brd-bottom">
+			<section id="faq" class="faq pt-120 pb-120">
 				<!--Container-->
 				<div class="container">
 					<!--Row-->
@@ -731,9 +737,62 @@
 				<!--Container-->
 				<!--End container-->
 			</section>
-			<!--Container-->
-			<div id="sponsors" class="container">
+			<!--Logo Section of sponsors and partners-->
+
+			<div id="sponsors" class="container clubs">
 				<!--Row-->
+				<div class="row">
+					<h4 class="gradient-text mt-10 mb-30" style="font-size: 20px; text-align: center;">
+						ORGANIZING PARTNERS
+					</h4>
+					<div class="col-sm-12 text-center">
+						<div class="col-md-2 col-sm-2">
+							<div class="block-club">
+								<img src="img/iiit-bh_logo.png" height="200" width="410" alt="iiit-bh">
+							</div>
+						</div>
+						<div class="col-md-2 col-sm-2">
+							<div class="block-club-1 ">
+								<img src="img/govt_of_odisha.png" height="200" width="410" alt="Govt. Of Odisha">
+							</div>
+						</div>
+						<div class="col-md-2 col-sm-2 ">
+							<div class="block-club">
+								<img src="img/chse_logo.png" height="200" width="410" alt="CHSE">
+							</div>
+						</div>
+						<div class="col-md-2 col-sm-2">
+							<div class="block-club">
+								<img src="img/osepa_logo.jpg" height="200" width="410" alt="OSEPA">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-30">
+					<h4 class="gradient-text mt-10 mb-30" style="font-size: 20px; text-align: center;">
+						TITLE PARTNERS
+					</h4>
+					<div class="col-sm-12 text-center">
+						<div class="col-md-2 col-sm-2">
+							<div class="block-club">
+								<img src="img/Google_2015_logo.svg" height="200" width="410" alt="Google">
+							</div>
+						</div>
+						<div class="col-md-2 col-sm-2">
+							<div class="block-club">
+								<img src="img/Dell_logo_2016.svg.png" height="200" width="410" alt="DELL">
+							</div>
+						</div>
+						<div class="col-md-2 col-sm-2">
+							<div class="block-club">
+								<img src="img/IBM_logo.svg.png" height="200" width="410" alt="IBM">
+							</div>
+						</div>
+					</div>
+			</div>
+
+			<!--Container-->
+			<!-- <div id="sponsors" class="container">
 				<div class="row">
 					<div class="vertical-center">
 						<div class="block-sponsor">
@@ -807,7 +866,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!--End container-->
 		</section>
 		<!--End sponser section-->
@@ -907,12 +966,24 @@
 						</div>
 						<div class="col-md-6">
 							<ul class="block-legal">
-								<li><span><a class="gradient-text scroll" style="font-size: 17px;" href="#">Event Booklet</a></span></li>
+								<li>
+									<span>
+										<a class="gradient-text scroll" style="font-size: 17px;" href="https://docs.google.com/document/d/1BIFfQq3fqwnxRRo_LEjixuAe35_Jm-ts/edit?usp=sharing&ouid=109970193768028404619&rtpof=true&sd=true" target="_blank">
+											Event Booklet
+										</a>
+									</span>
+								</li>
 							</ul>
 						</div>
 						<div class="col-md-6 ">
 							<ul class="block-legal">
-								<li><span><a class="gradient-text scroll" style="font-size: 17px;" href="#wrapper">Back To Top</a></span></li>
+								<li>
+									<span>
+										<a class="gradient-text scroll" style="font-size: 17px;" href="#wrapper">
+											Back To Top
+										</a>
+									</span>
+								</li>
 								<!-- <li><span><a class="gradient-text scroll" >Anand PS (EVENT COORDINATOR) 9061193652</a></span></li>
                            <li><span><a class="gradient-text scroll" >MAIL ID : anand.p.s@ieee.org</a></span></li> -->
 							</ul>
