--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<div class="row">
 						<div class="col-md-2">
 							<a class="scroll logo" href="#wrapper">
-								<img class="logo-default" src="img/logo/Oriya_preneur-removebg-preview.png" height="120" width="35" alt="logo" />
+								<img class="logo-default" src="img/logo/ODIAPRENEUR SVG LOGO.svg" height="120" width="35" alt="logo" />
 							</a>
 						</div>
 						<div class="col-md-10 text-right">
